--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 
-    <title>Hangman</title>
+    <title>HANGMAN</title>
   </head>
 
   <body>
